syntax = "proto3";
import "mailbox.proto";
package LPS.Core.Rpc.InnerMessages;
 
message CreateEntityRes {
  MailBox Mailbox = 1;
}
