syntax = "proto3";
import "mailbox.proto";
package LPS.Core.Rpc.InnerMessages;
 
message ExchangeMailBox {
  MailBox Mailbox = 1;
}
